# uefi-async

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
async/: Cargo.toml  README.md
async/src/: alloc.rs  bss.rs  common.rs  executor.rs  future.rs  global_allocator.rs  lib.rs  main.rs  nano_alloc.rs  nano_cast.rs  no_alloc.rs  sleep.rs  st3.rs  task.rs  util.rs  waker.rs
async/src/bss/: executor.rs  st3.rs  task.rs  waker.rs
async/src/common/: signal.rs  step.rs  tick.rs
async/src/future/: time.rs
async/src/nano_alloc/: channel.rs  control.rs  executor.rs  task.rs  time.rs  uefi.rs
async/src/no_alloc/: channel.rs  config.rs  executor.rs  future.rs  lifo.rs  task.rs  waker.rs
async/src/st3/: fifo.rs  lifo.rs
macros/: Cargo.toml
macros/src/: lib.rs  nano.rs  task.rs
testy/: Cargo.toml  README.md
testy/.cargo/: config.toml
testy/src/: _template.rs  main.rs  st3_benchmark.rs  st3_patch_benchmark.rs  talc.rs  task.rs  task_nano.rs  task_v1.rs  task_v2.rs
