[package]
name = "uefi-async"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = [ "alloc" ]

# no-alloc
static = [ "dep:static_cell", "dep:spin", "dep:num_enum" ]
embassy-backend = [ "static", "dep:embassy-executor" ]
edge-backend = [ "static", "dep:edge-executor" ]

# nano-alloc
nano-alloc = []
cassette-backend = [ "nano-alloc", "dep:cassette" ]

# alloc
alloc = [ "uefi/alloc", "dep:st3" ]
global-allocator = [ "alloc", "dep:spin", "dep:talc" ]
nya = [ "global-allocator" ]

[dependencies]
uefi = "0.36.1"
uefi-async-macros = { version = "0.2.0", path = "../macros" }

# no-alloc
static_cell = { version = "2.1.1", optional = true }
embassy-executor = { version = "0.9.1", optional = true }
edge-executor = { version = "0.4.1", optional = true, default-features = false, features = ["portable-atomic", "critical-section"] }
num_enum = { version = "0.7.5", optional = true, default-features = false, features = [ "complex-expressions" ] }

# nano-alloc
cassette = { version = "0.3.0", optional = true }

# alloc
st3 = { version = "0.4.1", optional = true }
talc = { version = "4.4.3", optional = true, default-features = false, features = ["lock_api"] }
spin = { version = "0.10.0", optional = true, features = ["lock_api"] }
