[package]
name = "uefi-async"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = [ "nano-alloc" ]
#default = [ "alloc" ]

# no-alloc
static = [ "dep:static_cell", "dep:num_enum" ]
embassy-backend = [ "static", "dep:embassy-executor" ]
edge-backend = [ "static", "dep:edge-executor" ]

# nano-alloc
nano-alloc = [ "uefi/alloc", "crossbeam/alloc" ]
cassette-backend = [ "nano-alloc", "dep:cassette" ]

# alloc
alloc = [ "uefi/alloc", "crossbeam/alloc", "dep:st3", "dep:async-recursion" ]
#nya = [ "global-allocator" ]

global-allocator = [ "uefi/alloc", "dep:talc" ]

[dependencies]
uefi = "0.36.1"
uefi-async-macros = { version = "0.2.1", path = "../macros" }
crossbeam = { version = "0.8.4", default-features = false }

# no-alloc
static_cell = { version = "2.1.1", optional = true }
embassy-executor = { version = "0.9.1", optional = true }
edge-executor = { version = "0.4.1", optional = true, default-features = false, features = ["portable-atomic", "critical-section"] }
num_enum = { version = "0.7.5", optional = true, default-features = false, features = [ "complex-expressions" ] }

# nano-alloc
cassette = { version = "0.3.0", optional = true }

# alloc
st3 = { version = "0.4.1", optional = true }
async-recursion = { version = "1.1.1", optional = true }
talc = { version = "4.4.3", optional = true, default-features = false, features = ["lock_api"] }
spin = { version = "0.10.0", features = ["lock_api"] }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-uefi"
targets = ["aarch64-unknown-uefi", "i686-unknown-uefi", "x86_64-unknown-uefi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
