[package]
name = "uefi-async-macros"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
version.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23.0"