[package]
name = "my-testy"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = { version = "0.36.1", features = ["logger", "alloc", "panic_handler"] }
uefi-async = { path = "../async", features = [ "alloc", "static", "global-allocator", "embassy-backend", "nya" ] }
uefi-async-macros = { path = "../macros" }
st3 = "0.4.1" # st3 & patch benchmark use
